[feature] Добавить управление участниками проекта
